plugins {
    id 'com.gradleup.shadow'
    id 'dev.architectury.loom'
    id 'architectury-plugin'
}

architectury {
    platformSetupLoomIde()
    fabric()
}
base {
    archivesName = "${mod_id}-${mod_version}-fabric"
}
configurations {
    common {
        canBeResolved = true
        canBeConsumed = false
    }
    compileClasspath.extendsFrom common
    runtimeClasspath.extendsFrom common
    developmentFabric.extendsFrom common

    // Files in this configuration will be bundled into your mod using the Shadow plugin.
    // Don't use the `shadow` configuration from the plugin itself as it's meant for excluding files.
    shadowBundle {
        canBeResolved = true
        canBeConsumed = false
    }
}
repositories {
    maven {
        name = 'ParchmentMC'
        url = 'https://maven.parchmentmc.org'
    }
}
dependencies {
    minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
    mappings loom.layered() {
        officialMojangMappings()
        parchment("org.parchmentmc.data:parchment-${rootProject.parchment_minecraft_version}:${rootProject.parchment_mappings_version}@zip")
    }
    modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
    modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version"
    // modImplementation "dev.architectury:architectury-fabric:$rootProject.architectury_api_version"
    common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
    shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
    def joclVersion = "2.0.5"
    implementation "org.jocl:jocl:${joclVersion}"
//    additionalRuntimeClasspath "org.jocl:jocl:${joclVersion}"
//    include "org.jocl:jocl:${joclVersion}"
    shadowBundle "org.jocl:jocl:${joclVersion}"
//    jarJar 'org.jocl:jocl:2.0.5'
//    jarJar(group: 'org.jocl', name: 'jocl', version: "[${joclVersion},)")
}

processResources {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neoforge_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description,
                             fabric_loader_version  : fabric_loader_version]
    inputs.properties replaceProperties
    filesMatching('fabric.mod.json') {
        expand replaceProperties
    }
}

shadowJar {
    configurations = [project.configurations.shadowBundle]
    archiveClassifier = 'dev-shadow'
}

import org.objectweb.asm.*
import java.util.jar.*

void removePreview(File jarFile) {
    println "正在移除预览版标记: ${jarFile}..."
    File tempFile = new File(jarFile.parent, jarFile.name + ".temp")

    try (JarFile jar = new JarFile(jarFile);
         JarOutputStream jos = new JarOutputStream(new FileOutputStream(tempFile))) {

        Enumeration<JarEntry> entries = jar.entries()
        while (entries.hasMoreElements()) {
            JarEntry entry = entries.nextElement()
            InputStream is = jar.getInputStream(entry)

            if (!entry.getName().endsWith(".class")) {
                jos.putNextEntry(new JarEntry(entry.getName()))
                is.transferTo(jos)
                continue
            }

            ClassReader cr = new ClassReader(is)
            ClassWriter cw = new ClassWriter(0)
            ClassVisitor cv = new ClassVisitor(Opcodes.ASM9, cw) {
                @Override
                void visit(int version, int access, String name, String signature, String superName, String[] interfaces) {
                    int newVersion = version & ~Opcodes.V_PREVIEW
                    super.visit(newVersion, access, name, signature, superName, interfaces)
                }
            }

            cr.accept(cv, 0)
            jos.putNextEntry(new JarEntry(entry.getName()))
            jos.write(cw.toByteArray())
        }
    }

    if (jarFile.delete()) {
        if (!tempFile.renameTo(jarFile)) {
            throw new RuntimeException("无法重命名临时文件！")
        }
        println "预览版标记移除成功！"
    } else {
        throw new RuntimeException("无法删除原始 Jar 文件！")
    }
}

remapJar {
    inputFile.set shadowJar.archiveFile

    doLast {
        removePreview archiveFile.get().asFile
    }
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
    options.compilerArgs += "--add-modules"
    options.compilerArgs += "jdk.incubator.vector"
    options.release.set(21)
}


def isGitHubActions = System.getenv("GITHUB_ACTIONS") == "true"
def isWindows = System.getProperty("os.name").toLowerCase().contains("windows")
def isLinux = System.getProperty("os.name").toLowerCase().contains("linux")

tasks.register("compileNativeLib", Exec) {
    group = "build"
    onlyIf { isWindows }

    def cppSource = layout.projectDirectory.file("../acceleratedRecoilingLib.cpp")
    def dllOutput = layout.projectDirectory.file("build-native/acceleratedRecoilingLib.dll")
    inputs.file(cppSource)
    outputs.file(dllOutput)
    workingDir = layout.projectDirectory.asFile
    doFirst {
        File bDir = new File(getWorkingDir(), "build-native")
        if (!bDir.exists()) bDir.mkdirs()
        if (isGitHubActions) {
            def javaHome = System.getenv("JAVA_HOME")
            commandLine 'cmd', '/c', """cl.exe /std:c++latest /O2 /fp:fast /arch:AVX2 /openmp /LD  /MD /Zi /W3 ../acceleratedRecoilingLib.cpp /Fe"build-native\\acceleratedRecoilingLib.dll" /Fd"build-native\\acceleratedRecoilingLib.pdb" /link /OPT:REF /OPT:ICF"""
        } else {
            def vcvarsScript = "I:\\vs\\VC\\Auxiliary\\Build\\vcvars64.bat"
            commandLine 'cmd', '/c', """call "${vcvarsScript}" && cl.exe /std:c++latest /O2 /fp:fast /arch:AVX2 /openmp /LD /MD /Zi /W3 /I"E:\\qucistart\\acceleratedrecoilingnative" ../acceleratedRecoilingLib.cpp /Fe"build-native\\acceleratedRecoilingLib.dll" /Fd"build-native\\acceleratedRecoilingLib.pdb" /link /OPT:REF /OPT:ICF"""
        }
        println "正在编译 acceleratedRecoilingLib.dll ..."
    }
}
// 2. 编译 Linux 的 .so
tasks.register("compileNativeLibLinux", Exec) {
    group = "build"
    onlyIf { isWindows || isLinux }
    def cppSource = layout.projectDirectory.file("../acceleratedRecoilingLib.cpp")
    def soOutput = layout.projectDirectory.file("build-native/libacceleratedRecoilingLib.so")
    inputs.file(cppSource)
    outputs.file(soOutput)
    workingDir = layout.projectDirectory.asFile
    doFirst {
        File bDir = new File(getWorkingDir(), "build-native")
        if (!bDir.exists()) bDir.mkdirs()
        if (isGitHubActions && isLinux) {
            def javaHome = System.getenv("JAVA_HOME")
            commandLine 'bash', '-c', """g++ -std=c++20 -O3 -ffast-math -mavx2 -fopenmp -shared -fPIC ../acceleratedRecoilingLib.cpp -o build-native/libacceleratedRecoilingLib.so"""
        } else {
            commandLine 'wsl', 'bash', '-c', """g++ -std=c++20 -O3 -ffast-math -mavx2 -fopenmp -shared -fPIC ../acceleratedRecoilingLib.cpp -o build-native/libacceleratedRecoilingLib.so"""
        }
        println "正在编译 libacceleratedRecoilingLib.so ..."
    }
}
tasks.named('processResources', ProcessResources) {
    dependsOn 'compileNativeLib'
    dependsOn 'compileNativeLibLinux'
    from(layout.projectDirectory.file("build-native/acceleratedRecoilingLib.dll")) {
        into ""
    }
    from(layout.projectDirectory.file("build-native/libacceleratedRecoilingLib.so")) {
        into ""
    }
}